# rotation-visualizer

./: .gitignore  Cargo.toml  README.md  app_description.md  index.html
assets/: asset_attribution.md  preprocess_objs.py  space_shuttle.mtl
assets/utils/: normalize_coords.py  rotate_z.py
src/: app.rs  lib.rs  main.rs
src/app/: axis_angle_flag.rs  collapsible_section.rs  dom.rs  format.rs  normalize.rs  quaternion_slider_group.rs  rotation.rs  rotation_tests_generated.rs  slider_group.rs  slider_widget.rs
src/app/axis_angle/: axis_angle_box.rs  mod.rs  slider_group.rs
src/app/euler_angles/: euler_angles_box.rs  mod.rs  slider_group.rs
src/app/quaternion/: mod.rs  normalize.rs  quaternion_box.rs  slider_group.rs
src/app/rotation_matrix/: mod.rs  rotation_matrix_box.rs
src/app/rotation_vector/: mod.rs  rotation_vector_box.rs  slider_group.rs
tests/: requirements.txt  scipy_test_case_generator.py  scipy_test_cases.json  scipy_tests_generator.py
web/: README.md
