[package]
name = "rotation-visualizer"
version = "0.1.0"
edition = "2024"
authors = ["Arthur Lovekin <arthurlovekin@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8.15", features = ["csr"] }
three-d = "0.18.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
